# MultiGraphViz

./: CMakeLists.txt  Graphics_view_zoom.cpp  Graphics_view_zoom.h  MultiGraphViz.pro  QGraphicsViewEc.cpp  README.md  load-superppr-viz.py  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
cmake/modules/: FindGraphViz.cmake  FindGraphviz.cmake
dnppr/: algo.h  dnppr.cpp  dnppr.h  graph.h  lib.h
graph/: GraphicNode.cpp  GraphicNode.h  QGVEdge.cpp  QGVEdge.h  QGVNode.cpp  QGVNode.h  QGVScene.cpp  QGVScene.h  QGVSubGraph.cpp  QGVSubGraph.h  customgraphicsscene.cpp  customgraphicsscene.h  qgv.h  visualisation.cpp  visualisation.h
graph/private/: QGVCore.cpp  QGVCore.h  QGVEdgePrivate.cpp  QGVEdgePrivate.h  QGVGraphPrivate.cpp  QGVGraphPrivate.h  QGVGvcPrivate.cpp  QGVGvcPrivate.h  QGVNodePrivate.cpp  qgvnodeprivate.cpp  qgvnodeprivate.h
louvain/: community.cpp  community.h  graph.cpp  graph.h  graph_binary.cpp  graph_binary.h  main_community.cpp  main_community.h  main_convert.cpp  main_convert.h
